--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,28 @@ body {
 }
 
 .box {
+    background-color: white;
     display: flex;
-    background-color: rgb(209, 198, 198);
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    width: 400px;
-    height: 400px;
+    position: absolute;
+    padding: 50px;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 500px;
+    height: 300px;
     border-radius: 5px;
-    padding: 25px;
     
 }
 
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 25px;
+    font-size: 22px;
+    margin-bottom: 25px;
+    
     
 }
 
@@ -25,14 +33,22 @@ form {
     font-size: 14px;
 }
 
+input {
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;  
+    color: #696565;
+    padding: 5px;
+  }
 
+  
 button {
     background-color: rgba(255, 166, 0, 0.857);
     color: white;
     border-radius: 5px;
-    padding: 10px 20px ;
+    padding: 10px 40px ;
     border: none;
     cursor: pointer;
+    font-size: 14px;
    
 }
 
@@ -41,12 +57,11 @@ button:hover {
     
 }
 
-.result {
+
+p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-radius: 5px;
-    margin-top: 40px;
     color: rgb(11, 148, 32);
     text-align: center;
-    display: flex;
-    
+    margin-top: 150px;
+        
 }
